# renesas

./: .gitignore
AI-CodingAssistant/: .dockerignore  .env.dev  .env.prod  .gitignore  .gitlab-ci.yml  Dockerfile  config.yml  docker-compose.yml  main.py  requirements.txt  run_embed.sh  run_web.sh  test.ipynb
Claudix/: .gitignore  package.json  tsconfig.json
Deploy Qwen2.5_Coder/: 1. Llamafy Qwen.py  2. Register Llamifed Qwen as UC Model.py
GraphCoder/: build_graph_database.py  build_query_graph.py  code-search-inference.py  my-languages.exp  my-languages.lib  output.json  retrieve.ipynb  search-inference.py  search_code.py  test.ipynb  test.py
ICT-chatbot/: README.md  config.py  environment.py  feature_extractor.py  (+9 more)
Proplens - AI Engineer Challenge V2/: .env.example  .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_DESIGN.md  README.md  analyze_data.py  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_full_flow.py
Proplens - AI Engineer Challenge V2/.claude/: settings.local.json
Proplens - AI Engineer Challenge V2/.claude/commands/: sysprompt.md
Proplens - AI Engineer Challenge V2/agents/: graph.py  prompts.py  tools.py
Proplens - AI Engineer Challenge V2/api/: controllers.py  schemas.py
Proplens - AI Engineer Challenge V2/config/: settings.py  urls.py
Proplens - AI Engineer Challenge V2/core/: admin.py  models.py
Proplens - AI Engineer Challenge V2/core/migrations/: 0001_initial.py
Proplens - AI Engineer Challenge V2/scripts/: load_data.py  test_vanna.py
Proplens - AI Engineer Challenge V2/tests/: test_api.py
(+1249 files in other folders)
