[project]
name = "property-sales-assistant"
version = "0.1.0"
description = "Conversational AI assistant for property sales"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.0",
    "django-ninja>=1.1.0",
    "django-ninja-extra>=0.21.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "vanna>=0.7.0",
    "chromadb>=0.5.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.0.0",
    "gunicorn>=21.2.0",
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
